Add getOwnedProductsByBarcode